# Raytracer

./: .gitignore  CMakeLists.txt  Photon Mapper.sln  Raytracer.sln  ReadMe.txt
GLM/: GLM.vcxproj  GLM.vcxproj.filters
Photon Mapper/: Pathtracer.cpp  Pathtracer.h  Photon Mapper.cpp  Photon Mapper.vcxproj  Photon Mapper.vcxproj.filters  disabled_warnings.h  glutil.cpp  linmath.h  stdafx.cpp  stdafx.h
Photon Mapper/libs/GL/: glew32.lib
lib/: linmath_Debug.lib
linmath/: float3x3.cpp  float3x3.h  linmath.vcxproj
src/: CMakeLists.txt  Graphics.cpp  Graphics.h  Gui.cpp  Gui.h  Raytracer.cpp  Raytracer.h  Raytracer.vcxproj  Raytracer.vcxproj.filters  glutil.cpp  glutil.h  imgui.ini  main.cpp
src/Geometry/: Ray.cpp  Ray.h
src/Scene/: Light.cpp  Light.h  Scene.cpp  Scene.h
src/objects/: Camera.cpp  Camera.h  IObject.h  Intersection.cpp  Intersection.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h
src/photons/: Photon.cpp  Photon.h  PhotonMap.cpp  PhotonMap.h
src/shaders/: simple.frag.glsl  simple.vert.glsl
